# amp-rs

./: .gitignore  BLINDING_FIX_SUMMARY.md  CHANGELOG.md  CHANGELOG_all_enhanced_errors.md  CHANGELOG_enhanced_errors.md  CONFIDENTIAL_TRANSACTION_BLINDING_FIX.md  CONTRIBUTING.md  CREATE_ISSUE_AUTHORIZE_ASSET_EXAMPLE.md  Cargo.toml  DESCRIPTOR_WALLET_SOLUTION.md  Integration testing bug.md  README.md  TEST_ASSET_CLEANUP_SOLUTION.md  TEST_ENVIRONMENT_SETUP.md  TEST_INSTRUCTIONS.md  TOKEN_PERSISTENCE.md  WARP.md  address.py  amp_changelog.md  auth-token-management.md  balance.py  blockstream-amp-confirm.py  check_tx_local.py  create_new_test_asset.rs  create_proper_test_asset.rs  debug_balance.py  demo_token_persistence.sh  derive_wallet_addresses.rs  find_address_local.py  find_working_asset.rs  gaid.py  sign.py  test_blinding_fix.rs  test_json_atomic.json  test_json_concurrent.json  test_json_integrity.json  todo.md  token.json  verify_wallet_address.rs  working-implementation.rs
.kiro/specs/asset-category-memo-methods/: design.md  requirements.md  tasks.md
.kiro/specs/asset-distribution-workflow/: design.md  requirements.md  tasks.md
.kiro/specs/asset-registry-registration/: design.md  requirements.md  tasks.md
.kiro/specs/auth-token-management/: design.md  requirements.md  tasks.md
.kiro/specs/clippy-code-quality-fixes/: design.md  requirements.md  tasks.md
.kiro/specs/deprecated-api-cleanup/: design.md  requirements.md  tasks.md
.kiro/specs/extended-registered-user-api/: design.md  requirements.md  tasks.md
.kiro/specs/lwk-software-signer/: design.md  requirements.md  tasks.md
.kiro/specs/manager-asset-operations/: design.md  requirements.md  tasks.md
.kiro/specs/token-test-isolation/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: enhanced-error-reporting.md  enhanced-errors-complete.md  error-inventory.md  signer_integration_guide.md
examples/: README_WALLET_MIGRATION.md  README_end_to_end_distribution.md  add_gaid_to_user.rs  add_user_to_category.rs  asset_details.rs  asset_display_tui.rs  asset_info.rs  asset_operations_integration.rs  asset_summary.rs  asset_summary_stats.rs  assignment_operations.rs  burn_asset_example.rs  cancel_test_asset_distribution.rs  category_info.rs  changelog.rs  check_wallet_signing_capability.rs  clean_cloud_wallets.rs  cleanup_resources.rs  create_issue_authorize_asset.rs  create_issue_authorize_demo_asset.rs  create_issue_authorize_reissuable_asset.rs  create_test_assignments.rs  create_test_distribution.rs  create_user_with_gaid.rs  current_manager.rs  descriptor_wallet_setup.rs  diagnose_utxo_issues.rs  elements_first_wallet_setup.rs  elements_rpc_usage.rs  end_to_end_distribution_example.rs  enhanced_errors_showcase.rs  find_assets_with_keys.rs  find_test_distribution_assets.rs  fix_cloud_wallet_signing.rs  get_distribution_info.rs  get_lwk_address.rs  get_test_address.rs  get_user_by_gaid.rs  import_treasury_addresses_to_cloud.rs  list_and_cleanup.rs  (+27 more)
gaid-scripts/: address.py  balance.py  gaid.py  gaid_2of2.py  generate_mnemonic.py  list_subaccounts.py  sign.py
gaid-scripts/registry/liquid/: assets  icons
gaid-scripts/registry/liquid-testnet/: last-modified
registry/elements-regtest/: assets
registry/liquid/: assets  icons
registry/liquid-testnet/: assets
src/: client.rs  client_trait.rs  lib.rs  mock_client.rs  mocks.rs  model.rs
src/signer/: README.md  error.rs  lwk.rs  mod.rs
tests/: api.rs  asset_distribution_integration.rs  client.rs  config_documentation_test.rs  elements_rpc_wallet_methods.rs  enhanced_error_test.rs  enhanced_errors_comprehensive_test.rs  mock_client_test.rs  model.rs  reissue_asset_integration.rs  token_management.rs  token_persistence.rs  token_strategy_integration.rs  transaction_construction.rs
