[package]
name = "amp-rs"
version = "0.0.1"
edition = "2021"
description = "A Rust client for the Blockstream AMP API, providing interfaces for asset management, user operations, and token handling on the Liquid Network."
license = "BSD-3-Clause"
repository = "https://github.com/gmikeska/amp-rs"
homepage = "https://github.com/gmikeska/amp-rs"
keywords = ["blockstream", "amp", "liquid", "assets", "blockchain"]
categories = ["api-bindings", "cryptography::blockchains"]
readme = "README.md"

[lib]
name = "amp_rs"
path = "src/lib.rs"

[[example]]
name = "changelog"
path = "examples/changelog.rs"

[[example]]
name = "token_persistence"
path = "examples/token_persistence.rs"

[[example]]
name = "asset_summary"
path = "examples/asset_summary.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.10"
async-trait = "0.1"
tracing = "0.1"
tokio-retry = "0.3.0"
secrecy = { version = "0.8", features = ["serde"] }
url = "2.2.2"
zeroize = { version = "1.5", features = ["derive"] }
httpmock = { version = "0.6.8" }
dotenvy = "0.15"
rand = "0.8"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "3.0"
tracing-subscriber = "0.3"
