[package]
name = "amp-rust"
version = "0.0.8"
edition = "2021"
description = "A Rust client for the Blockstream AMP API, providing interfaces for asset management, user operations, and token handling on the Liquid Network."
license = "BSD-3-Clause"
repository = "https://github.com/satscapital-org/amp-rs"
homepage = "https://github.com/satscapital-org/amp-rs"
keywords = ["blockstream", "amp", "liquid", "assets", "blockchain"]
categories = ["api-bindings"]
readme = "README.md"

[lib]
name = "amp_rs"
path = "src/lib.rs"

[[example]]
name = "changelog"
path = "examples/changelog.rs"

[[example]]
name = "token_persistence"
path = "examples/token_persistence.rs"

[[example]]
name = "asset_summary"
path = "examples/asset_summary.rs"

[[example]]
name = "signer_usage"
path = "examples/signer_usage.rs"

[[example]]
name = "descriptor_wallet_setup"
path = "examples/descriptor_wallet_setup.rs"

[[example]]
name = "cancel_test_asset_distribution"
path = "examples/cancel_test_asset_distribution.rs"

[[example]]
name = "create_issue_authorize_asset"
path = "examples/create_issue_authorize_asset.rs"

[[example]]
name = "create_issue_authorize_reissuable_asset"
path = "examples/create_issue_authorize_reissuable_asset.rs"

[[example]]
name = "reissue_asset_example"
path = "examples/reissue_asset_example.rs"

[[example]]
name = "burn_asset_example"
path = "examples/burn_asset_example.rs"

[[example]]
name = "asset_display_tui"
path = "examples/asset_display_tui.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.10"
async-trait = "0.1"
tracing = "0.1"
tokio-retry = "0.3.0"
secrecy = { version = "0.8", features = ["serde"] }
url = "2.2.2"
zeroize = { version = "1.5", features = ["derive"] }
httpmock = { version = "0.6.8" }
dotenvy = "0.15"
rand = "0.8"
lwk_signer = "0.12.0"
lwk_common = "0.12.0"
bip39 = "2.0"
elements = "0.25.0"
hex = "0.4"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "3.0"
tracing-subscriber = "0.3"
ratatui = "0.29"
crossterm = "0.28"
